# TGATool

./: .clang-format  .gitignore  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  LICENSE  README.md  TGATool.exe.manifest  main.cpp
src/: DebugLog.hpp  main.cpp
